pfish       2005/11/09 06:13:52 UTC	(20051109-3721)
  Log:
  Update flags for UserServ and fix a crash in the last seen code.
  

  Changes:	Modified:
  +15 -2	trunk/modules/userserv/info.c (File Modified) 


alambert    2005/11/09 06:13:21 UTC	(20051109-3719)
  Log:
  US FREEZE: send messages from the right nickname

  Changes:	Modified:
  +2 -2		trunk/modules/userserv/freeze.c (File Modified) 


alambert    2005/11/09 06:11:55 UTC	(20051109-3717)
  Log:
  MemoServ: send CTCP responses from the right nick

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/main.c (File Modified) 


alambert    2005/11/09 05:52:16 UTC	(20051109-3715)
  Log:
  chanacs_user_has_flag(): if we're an alias, only ask about the parent nickname (per w00t)

  Changes:	Modified:
  +28 -2	trunk/src/node.c (File Modified) 


pfish       2005/11/09 05:50:17 UTC	(20051109-3713)
  Log:
  LISTCHANS: Port new version over to UserServ, and some minor improvments for both.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/listchans.c (File Modified) 
  +41 -36	trunk/modules/userserv/listchans.c (File Modified) 


alambert    2005/11/09 05:35:19 UTC	(20051109-3711)
  Log:
  LISTCHANS: improve logging; pfish will port to userserv if it works

  Changes:	Modified:
  +11 -7	trunk/modules/nickserv/listchans.c (File Modified) 


pfish       2005/11/09 05:24:21 UTC	(20051109-3709)
  Log:
  LISTCHANS stuff.
  

  Changes:	Modified:
  +34 -33	trunk/modules/nickserv/listchans.c (File Modified) 


alambert    2005/11/09 04:47:53 UTC	(20051109-3707)
  Log:
  CS XOP, FLAGS, AKICK: allow opers to view channel access lists, consistent with LISTCHANS decision

  Changes:	Modified:
  +13 -4	trunk/modules/chanserv/akick.c (File Modified) 
  +8 -3		trunk/modules/chanserv/flags.c (File Modified) 
  +14 -5	trunk/modules/chanserv/xop.c (File Modified) 


alambert    2005/11/09 04:12:28 UTC	(20051109-3705)
  Log:
  should_*_host: use strlcpy

  Changes:	Modified:
  +4 -12	trunk/src/function.c (File Modified) 

